<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_add"
            android:title="@string/menu_add_device" />
        <item
            android:id="@+id/nav_delete"
            android:title="@string/menu_delete_device" />
        <item
            android:id="@+id/nav_order"
            android:title="@string/menu_order" />

        <item
            android:id="@+id/nav_request"
            android:title="@string/menu_request_monitor" />

        <item
            android:id="@+id/nav_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>